--- a/trunk/WebRoot/resources/css/style.css
+++ b/trunk/WebRoot/resources/css/style.css
@@ -513,6 +513,41 @@ form input[type="radio"] {
 				border: 0;
                 }
 
+.formHeader{
+	margin:10px 0 10px 0;
+}
+
+.formHeader span{
+	margin:0 10px 0 10px;
+}
+.formHeader input{
+	width:108px;
+}
+
+.formAdd th{
+	border-top: 1px solid #C1DAD7;
+	border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+}
+
+.formAdd td{
+	border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+}
+
+.formContent td{
+	padding:5px 5px !important;
+}
+
+.formAdd td input{
+	width:50px;
+}
+
+.formAdd .but{
+	border:0;
+}
+
+				
 /*************** Notifications ***************/
 
 .notification {
